--- a/estoque-bebidas-frontend/src/pages/Components/Table.css
+++ b/estoque-bebidas-frontend/src/pages/Components/Table.css
@@ -33,8 +33,8 @@ th {
 }
 
 main.table {
-  width: 82vw;
-  height: 76vh;
+  width: 98vw;
+  height: 78vh;
   background-color: #1a1a1a;
   box-shadow: 0 0.4rem 0.8rem #0005;
   border-radius: 0.8rem;
@@ -68,4 +68,5 @@ main.table {
 
 img {
   cursor: pointer;
+  width: 30px;
 }
